  Event.fire() now copies the listeners list, synchronizing the fire/add/remove methods wasn't enough apparently, so it was removed
  EntityModel.masterModel field added
  EntityPanel.masterPanel field added
  EntityApplicationModel.applicationTreeModel removed
  EntityPanel.initializeResizing/Navigation moved to EntityApplicationPanel
  EntityPanel.getDetailPanels() and getLinkedDetailPanel() added
  EntityApplicationPanel shows the root tab pane regardless of the number of main application panels
  EntityApplicationPanel, some refactoring and restructuring
  Reorganized the resources structure
  Added run_demo_***, run_server_*** tasks to ant build file, restructured it a bit and renamed junit_db_*** properties to run_db_*** in build.properties
  DbConnection query logging now includes query execution time
  EntityApplicationPanel, removed setLookAndFeel command from menu
  UiUtil.setLookAndFeel() removed
  Ant build file cleanup and restructuring, merged deploy_profiling into deploy_demos
  Added create/delete db targets for empdept to ant build file as well as relevant scripts to resources/demos/empdept/scripts
  EntityDbUtil.getQueryString() now uses "is" for null values
  Added resources for creating a derby db for the unit tests
  EntityTestUnit now uses setUp() and tearDown() to connect and disconnect from the database
  PropertySearchModel.bindComboBoxEvents() reverted back to previous version since my "fix" introduced a bug resulting in only single item selection
  Fixed copyright message name for UTF-8, yet again
  TestPetstore now exends EntityTestUnit
  Unit tests now run with an embedded derby database
  Added run_derby_server and shutdown_derby_server to ant build file
  Created lib/derby for the derby jars
  Removed mysql and oracle jdbc drivers due to licensing
  EntityModel.stActive and activeStateGroup moved to EntityPanel, where they belong
  Added IntelliJ project file
  Excluded *Stub.class files from jminor-server.jar