@@ -508,7 +508,7 @@
   <target name="create_demo_db" if="demodb.not.available"
           description="Creates the demo derby database in case it is not already available">
     <java fork="true" classname="org.apache.derby.tools.ij" classpathref="libraries">
-      <sysproperty key="ij.connection.test" value="jdbc:derby:${demo.db.dir}/${demo.db.name};create=true" />
+      <sysproperty key="ij.connection.demo" value="jdbc:derby:${demo.db.dir}/${demo.db.name};create=true" />
       <arg value="${junit.sql.dir}/create_demo_db.sql"/>
     </java>
   </target>
